--- a/experience.html
+++ b/experience.html
@@ -71,6 +71,7 @@
             width: 60%;
             text-align: center;
             margin-top: 30px;
+            line-height: 2.5rem;
         }
 
 
