--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
         <h5>LUXURY JAPAN TRAVEL</h4><br>
         <div class="newsletter">
             <div class="row">
+                <span style="font-weight: 600; font-size: 18px;">Discover more about Japan</span><br><br>
                 <div class="col-8"><input type="text" class="form-control customform" placeholder="Enter your email for newsletter..."></div>
                 <div class="col-4"><button class="btn custombtn w-100">Subscribe</button></div>
             </div>
