--- a/about.html
+++ b/about.html
@@ -93,7 +93,6 @@
             width: 60%;
             text-align: center;
             margin-top: 30px;
-            line-height: 2.5rem;
         }
 
 
@@ -189,7 +188,6 @@
 }
 .content-container p{
     width: 70%;
-    line-height: 2.5rem;
 }
 
 .custom-btn{
@@ -218,7 +216,6 @@
     margin-right: 60px;
 }
 .tripto p{
-    line-height: 2rem;
     width: 70%;
 }
 .header-about{
@@ -243,15 +240,16 @@
 .header-about .main{
     width: 80%;
 }
-.header-about .main p{
-    line-height: 2.5rem;
-}
+
 .whyus{
     width: 70%;
     margin: 0 auto;
     margin-bottom: 450px;
 }
-.whyus h2{
+.whyus p{
+    width: 85%;
+}
+.whyus h5{
     color: #518706;
 }
 .header-about img{
@@ -323,6 +321,10 @@
 
     .whyus{
         width: 85% !important;
+        text-align: center;
+    }
+    .whyus p{
+        width: 100% !important;
     }
     #readyto{
         text-align: center !important;
@@ -400,29 +402,29 @@
             <div class="whyus">
                 <h1 class="text-center mb-5">Why Us ?</h1><br><br><br>
                 <div class="row">
-                    <div class="col-sm col-md">
-                        <h2>Customized Itinerary</h2>
+                    <div class="col-sm col-md mb-3">
+                        <h5>Customized Itinerary</h2><br>
                         <p>A travel advisor will create a fully customized itinerary from scratch based on your budget, interests, and preferences. This means that your itinerary will be unique and tailored just for you. You won't be limited to a pre-packaged tour or a set list of activities. In comparison, travel agents often rely on reselling packaged tour products created by tour operators with a list of activities that may not align with your personal preferences. You may end up spending your time doing activities that you're not interested in, simply because that's what the travel agent has available.</p>
                     </div>
-                    <div class="col-sm col-md">
-                        <h2>Hassle-Free</h2>
+                    <div class="col-sm col-md mb-3">
+                        <h5>Hassle-Free</h2><br>
                         <p>Travel advisor is the advanced version of the travel agent.Travel agents may book a flight ticket, book a hotel, and set up transfers only while we support our clients in case they encounter a language barrier during their holiday. A travel advisor can take the hassle out of planning your trip.</p>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-sm col-md">
-                        <h2>Expertise and knowledge</h2>
+                    <div class="col-sm col-md mb-3 mt-4">
+                        <h5>Expertise and knowledge</h2><br>
                         <p>Provide expert knowledge and advice to help you plan the perfect vacation.  We can advise you on the best options for where to go and what is interesting to do. A lot of the best hotels are ones you have likely never heard of. This is where a travel advisor’s knowledge cannot be beat.</p>
                     </div>
-                    <div class="col-sm col-md">
-                        <h2>Save your time and reduce your stress</h2>
+                    <div class="col-sm col-md mb-3">
+                        <h5>Save your time and reduce your stress</h2><br>
                         <p>Travel Advisor will save you time, and money, and reduce your stress especially when a client is planning to travel to a non-English-speaking country.  There are many accommodation choices in Japan, restaurants, and endless places to discover. A travel advisor can clear the clutter and help you save your time as planning a trip is a time-consuming process and people often have difficulty finding time to plan the trip.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm col-md">
-                        <h2>Connections</h2>
+                    <div class="col-sm col-md mb-3">
+                        <h5>Connections</h2><br>
                         <p>Travel advisors use personal contacts to make reservations that aren’t available online or through typical booking systems.</p>
                     </div>
                     <div class="col-sm col-md"></div>
