--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
   <body style="background-color: #000000;">
     <!-- <div class="splash">
         <img src="images/logo.webp" class="d-block mx-auto mb-5 imageSplash" width="190" alt="">
-        <h1 style="display: none;" class="titleSplash" id="asat">Asatsuyu</h1>
+        <h1 style="display: none;" class="titleSplash" id="asat">ASATSUYU</h1>
         <p style="display: none;" class="subSplash" id="asatP">JAPAN LUXURY TRAVEL</p>
     </div> -->
     <div style="overflow: hidden;">
